# rsc-rsm-bulk-enroller

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: README.md
.github/workflows/: pylint.yml
rscbulkenrollment/: __init__.py  cloudenrollment.py  password.py  rsc_bulk_enroll.py
rscbulkenrollment/discovery/: __init__,py  importer.py  rsc_finder.py
rscbulkenrollment/rsc/: __init__,py  rsc.py
tests/: __init__.py  test_importer.py
tests/resources/: Book1-BOM.csv  Book1-commas.csv  Book1-no-BOM.csv  Book2-tabs.csv
